# In-Harmony-with-the-Dust

./: .gitignore  README.md
agent/: AGENTS.md  feature-spec.md  readme.md  zshrc
docker/php-normal/: Dockerfile  Dockerfile.pro
docker/php-webman/: Dockerfile
docker/php-xampp/: Dockerfile
go/BinLogVisual/: .binlog.001585.sql.swp  main.go
go/SyntaxParser/: go.mod  go.sum  main.go  parse_after_edit.md  syntax_all.md  syntax_doc.md  tmp  xxx.php
go/VisualDifferGui/: README.md  app.go  compare.go  file.go  go.mod  main.go  wails.json
go/big-work/: go.mod  go.sum  main.go  readme
go/cloudStore/: go.mod  go.sum  main.go
go/fsm/: go.mod  main.go
go/go-event-stream/: event.html  main.go
go/go-sdl2-examples/: go.mod  go.sum
go/gui/: api.go  app.go  go.mod
go/im/: ARCHITECTURE.md  DESIGN.md  go.mod
go/learn-with-game/: go.mod  go.sum
go/multiplayer/: go.mod  go.sum
go/mydb/: main.go
go/pinyin/: daily.txt  main.go
itingshu/: itingshu_batch-fix_https.js
luago/: luac.out  readme.md
python/ollama-batch-master/: README.md  pyproject.toml
python/ollama-batch-master/examples/: recipes.json  recipes_result.json  sweet_or_salty.txt
python/ollama-batch-master/examples/recipes/: Better Gluten-Free Chocolate Chip Cookies.txt  Better Lasagna.txt  Black Bean Salad with Lime Dressing.txt  Chunky Carrot Spaghetti Sauce.txt  Cinnamon Pinwheels.txt  Pear Tarte Tatin.txt  Red Velvet Valentines Cake.txt  Strawberry Pie.txt
python/ollama-batch-master/ollama_batch/: ollama_batch.py
python/ollama-batch-master/utils/: neat.config.json  neat.py
(+846 files in other folders)
